<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    android:gravity="center"
    android:minWidth="300dp"
    android:minHeight="300dp">


    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:ems="10"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_old_password"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_conf_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conf_pass"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_button_bg"
        android:text="@string/change_pass"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_conf_password" />
</androidx.constraintlayout.widget.ConstraintLayout>